make usergrid ram amount configurable